# multidispatch-lib

./: LICENSE.md  README.md  foldl.hpp  foldr.hpp  multidispatch.hpp  test_multidispatch.cpp  visitor.hpp
include/utility/: append.hpp  apply_list.hpp  at.hpp  bind.hpp  cartesian_product.hpp  concat.hpp  filter.hpp  foldl.hpp  foldr.hpp  handle_interface.hpp  if.hpp  index_of.hpp  is_handle.hpp  map.hpp  multidispatch.hpp  prepend.hpp  register_boost_variant.hpp  register_variant.hpp  size.hpp  variant.hpp  visitor.hpp
test/: CMakeLists.txt  test_apply_list.cpp  test_bind.cpp  test_boost_variant.cpp  test_cartesian_product.cpp  test_filter.cpp  test_fold.cpp  test_index_of.cpp  test_map.cpp  test_multidispatch.cpp  test_variant.cpp  test_visitor.cpp
